<resources>
    <string name="app_name">Rescate Animal Ecuador</string>
    <string name="app_name_bar">FUNDACION RESCATE ANIMAL\nECUADOR</string>
    <string name="welcome">Bienvenido a la App Cola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario no registrado</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recovery_title">Recuperaracion de clave</string>
    <string name="recovery_subtitle">Ingrese su correo\n electronico para poder recuperar su cuenta</string>
    <string name="recovery_field">Correo</string>
    <string name="user">Usuario</string>
    <string name="password">Clave</string>
    <string name="register">Registrarse</string>
    <string name="accept">Aceptar</string>
    <string name="login">Inicio Sesion</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="exit">Salir</string>

    <string name="register_save">Guardar</string>
    <string name="name">Nombre</string>
    <string name="name_mascota">Nombre de la mascota</string>

    <string name="lastname">Apellido</string>
    <string name="email">Correo</string>
    <string name="phone">Telefono</string>
    <string name="address">Direccion</string>

    <string name="report">Reportes</string>
    <string name="service">Servicios</string>
    <string name="product">Productos</string>
    <string name="about">Quienes Somos</string>

    <string name="breed">Raza</string>


    <string name="adoption">Adoptar</string>
    <string name="newreport">Reportar</string>
    <string name="fixPoint">Fijar Punto</string>
    <string name="question">Deseas formar parte de la app Cola? </string>

    <string-array name="array_species">
        <item>Especie</item>
        <item>Perro</item>
        <item>Gato</item>
    </string-array>
    <string-array name="array_reporte">
        <item>Tipo de reporte</item>
        <item>Abandono</item>
        <item>Extraviado</item>
    </string-array>

    <!--MAP-->
    <string name="map_top_bar_text">UBICA LA DIRECCIÓN DE TÚ DOMICILIO</string>
    <string name="map_search_bar_hint">Buscar dirección</string>
    <string name="map_permission_yes_">Si</string>
    <string name="map_permission_no">No</string>


    <string name="about_title_name">FUNDACION RESCATE ANIMAL</string>

    <string name="about_title">Somos una Fundación sin fines de lucro, de derecho privado, con personería jurídica, aprobada mediante Acuerdo N.- 029-2012 del Ministerio de Agricultura, Ganadería, Acuacultura y Pesca el 25 de junio del 2012, que nació en la ciudad de Guayaquil con el objetivo de luchar por el bienestar de los animales y fomentar una cultura de tolerancia y respeto hacia ellos.</string>
    <string name="about_mision">Mision</string>
    <string name="about_mision_content">Trabajar por la liberación animal a partir de la creación de estrategias educativas, la construcción y promoción de políticas públicas, la ayuda a los animales en situación de riesgo, a nivel local y nacional, que generen un cambio social profundo y permanente para la convivencia armónica humano – animal.</string>
    <string name="about_vision">Vision</string>
    <string name="about_vision_content"> Ser activistas en movimiento permanente y en constante lucha por los derechos animales, comprometidos con lograr un cambio cultural en nuestra sociedad que se manifieste en liberación animal, erradicación de la violencia y cultura de paz.</string>

    <string name="report_list_about">Quienes somos</string>
    <string name="report_list_servicio">Servicio</string>
    <string name="report_list_login">Login</string>
    <string name="report_list_report">Reportar</string>
    <string name="report_list_adopcion">Adopcion</string>

    <string name="report_title_activity">Nuevo Reporte</string>

    <string name="view_mascota_postular">Postular</string>
    <string name="view_mascota_title_activity">Adopcion</string>


    <string name="complete_form_save">Guardar</string>
    <string name="complete_form_exit">Salir</string>

    <string name="complete_form_titulo">Completa los datos</string>
    <string name="complete_form_titulo2">de mascota reportada</string>
    <string name="complete_form_nombre">Nombre persona</string>
    <string name="complete_form_nombre_mascota">Nombre de mascota</string>
    <string name="complete_form_especie">Especie</string>
    <string name="complete_form_raza">Raza</string>
    <string name="complete_form_color">Color</string>
    <string name="complete_form_edad">Edad</string>
    <string name="complete_form_sexo">Sexo</string>
    <string name="complete_form_descripcion">Descripcion</string>
    <string name="complete_form_telefono">Telefono</string>
    <string name="complete_form_direccion">Direccion</string>
    <string name="complete_form_reporte">Reporte</string>
    <string name="complete_form_tipo_reporte">Tipo de reporte</string>
    <string name="complete_form_observacion">Observacion</string>
    <string name="complete_form_foto">Foto</string>


    <string name="about_title_activity">Quienes somos</string>
    <string name="service_title_activity">Servicios</string>
    <string name="productos_title_activity">Productos</string>
    <string name="reportados_title_activity">Mascotas reportadas</string>
    <string name="login_title_activity">Iniciar sesion</string>

    <string name="productos_filtro">Seleccione una categoria</string>

</resources>
