<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/report" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/service" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/product" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
