<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".fragment.Question">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_margin="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="40sp"
        android:text="@string/question" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:weightSum="2">
        <Button
            android:id="@+id/question_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_rounded"
            android:text="@string/exit" />
        <Button
            android:id="@+id/question_register"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>