<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:ignore="MissingPrefix"
    android:background="@drawable/background"

    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:paddingBottom="60dp"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_name_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lastname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_lastname_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lastname"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"

                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_email_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_phone_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

               >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_address_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_user_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/user"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_password_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/indigo">
        <Button
            android:id="@+id/register_new_button"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorOnTextButton"

            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:text="@string/register_save" />
    </LinearLayout>

</RelativeLayout>