<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:paddingBottom="60dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:textSize="24sp"
                android:textColor="@color/light_blue"
                android:text="@string/complete_form_titulo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/light_blue"
                android:gravity="center|center_horizontal"
                android:text="@string/complete_form_titulo2"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="100dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/complete_form_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/complete_form_name_input"
                            fontPath="fonts/Lato-Light.ttf"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/complete_form_nombre"
                            android:textColorLink="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"

                            android:textColor="@color/black"
                            android:inputType="textCapWords"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_name_mascota_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/register_name_mascota_input"
                            fontPath="fonts/Lato-Light.ttf"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorLink="@color/black"
                            android:textColorHighlight="@color/black"
                            android:textColorHint="@color/black"

                            android:textColor="@color/black"
                            android:hint="@string/complete_form_nombre_mascota"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgPhoto"
                    android:padding="16dp"
                    android:src="@drawable/ic_photo_camera_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:entries="@array/array_species"></Spinner>-->
            <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
            <!--android:id="@+id/spnSpecies"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="Especie "-->
            <!--android:textColorHint="#05ab9a"-->
            <!--app:met_floatingLabel="normal" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_especie_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_especie_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/complete_form_especie"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_raza_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_raza_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/complete_form_raza"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_color_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_color_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/complete_form_color"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_edad_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_edad_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:hint="@string/complete_form_edad"
                    android:inputType="numberPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spnSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complete_form_sexo"
                android:textColorHint="#05ab9a"
                app:met_floatingLabel="normal" />

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/complete_form_sexo_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
            <!--android:id="@+id/complete_form_sexo_input"-->
            <!--fontPath="fonts/Lato-Light.ttf"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:hint="@string/complete_form_sexo"-->
            <!--android:inputType="textCapWords"-->
            <!--android:maxLines="1" />-->

            <!--</android.support.design.widget.TextInputLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_telefono_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_telefono_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/complete_form_telefono"
                    android:inputType="numberPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_direccion_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_direccion_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:hint="@string/complete_form_direccion"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <!--<Spinner-->
            <!--android:id="@+id/spnReporte"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="match_parent"-->
            <!--android:spinnerMode="dialog"-->
            <!--android:padding="20dp"-->
            <!--android:entries="@array/array_reporte"-->
            <!--android:layout_marginBottom="20dp"/>-->




            <android.support.design.widget.TextInputLayout
                android:id="@+id/complete_form_reporte_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/complete_form_reporte_input"
                    fontPath="fonts/Lato-Light.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"

                    android:textColor="@color/black"
                    android:hint="@string/complete_form_tipo_reporte"
                    android:inputType="textCapWords"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:background="@color/indigo">
        <Button
            android:id="@+id/complete_form_guardar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textColor="@color/colorOnTextButton"
            android:layout_margin="5dp"
            android:background="@drawable/button_rounded"
            android:text="@string/complete_form_save" />
        <Button
            android:id="@+id/complete_form_salir"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:textColor="@color/colorOnTextButton"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:text="@string/complete_form_exit" />
    </LinearLayout>

</RelativeLayout>