<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spnEspecie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complete_form_especie"
            android:textColorHint="#05ab9a"
            android:textSize="14sp"
            app:met_floatingLabelPadding="5dp"
            app:met_floatingLabel="none"  />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spnRaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complete_form_raza"
            android:textColorHint="#05ab9a"
            android:textSize="14sp"
            app:met_floatingLabelPadding="5dp"
            app:met_floatingLabel="none"  />
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spnSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/complete_form_sexo"
            android:textColorHint="#05ab9a"
            android:textSize="14sp"
            app:met_floatingLabelPadding="5dp"
            app:met_floatingLabel="none" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:context=".view.comercio.ComercioFragment"
        tools:listitem="@layout/item_mascota_reportada" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:background="@color/indigo">
        <Button
            android:id="@+id/view_mascotas_postular"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:textColor="@color/colorOnTextButton"
            android:layout_height="50dp"
            android:background="@drawable/button_rounded"
            android:text="@string/view_mascota_postular" />
    </LinearLayout>
    <!--<Button-->
    <!--android:id="@+id/register_new_button"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_margin="20dp"-->
    <!--android:layout_height="50dp"-->
    <!--android:background="@drawable/button_rounded"-->
    <!--android:text="@string/view_mascota_postular" />-->
</LinearLayout>